--- a/tbms/src/frontend/templates/administration/virtual_machines.html
+++ b/tbms/src/frontend/templates/administration/virtual_machines.html
@@ -63,6 +63,114 @@
     </nav>
 </header>
 
+<!-- VM Overlay Window -->
+<div id="vmOverlay" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="width: 50%;">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header" align="center" style="background-color: #B8D0E4;">
+                <strong>New Virtual Machines</strong>
+            </div>
+            <div class="modal-body" style="background-color: #E2ECF3;">
+                <div class="panel panel-default col-sm-5"
+                     style="margin-top: 8px; background-color: #FCFCFC; border-color: black">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong>Available
+                        Virtual Machines</strong></div>
+                    <div class="panel-body">
+                        dfasfsdf
+                    </div>
+                </div>
+                <div class="col-sm-2" align="center">
+                    <table style="height: 100%;"><!-- Table used for Vertical Align -->
+                        <tbody>
+                        <tr>
+                            <td class="align-middle">
+                                <button type="button" class="btn btn-default align-middle"
+                                        style="background-color: #ECECEC;"> >>
+                                </button>
+                                <br><br>
+                                <button type="button" class="btn btn-default align-middle"
+                                        style="background-color: #ECECEC;"> <<
+                                </button>
+                            </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="panel panel-default col-sm-5"
+                     style="margin-top: 8px; background-color: #FCFCFC; border-color: black">
+                    <div class="panel-heading" style="background-color: #FCFCFC;" align="center"><strong> Selected
+                        Virtual Machines</strong></div>
+                    <div class="panel-body">
+                        fdsafsdfa
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer" style="background-color: #E2ECF3">
+                <button type="button" class="btn btn-default">Add</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- VM Overlay Window -->
+<div id="cloneOverlay" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="width: 50%;">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header" align="center" style="background-color: #B8D0E4;">
+                <strong>Clone</strong>
+            </div>
+            <div class="modal-body" style="background-color: #E2ECF3;">
+                <table class="table">
+                    <tbody>
+                    <tr>
+                    <tr>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;"><strong>Selected VM</strong></td>
+                        <td class="col-sm-4" style="border-color: #E2ECF3;">Name of VM</td>
+                    </tr>
+                    <tr>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;"><strong>No. of Clones</strong></td>
+                        <td class="col-sm-4" style="border-color: #E2ECF3;">
+                            <input type="text" class="form-control" placeholder="Number"
+                                   aria-describedby="sizing-addon1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;"><strong>VRDP Seed</strong></td>
+                        <td class="col-sm-4" style="border-color: #E2ECF3;">
+                            <input type="text" class="form-control" placeholder="VRDP Seed"
+                                   aria-describedby="sizing-addon1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;"><strong>Network Adapter Name</strong></td>
+                        <td class="col-sm-4" style="border-color: #E2ECF3;">
+                            <input type="text" class="form-control" placeholder="Network Adapter Name"
+                                   aria-describedby="sizing-addon1">
+                        </td>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;"><strong>Network Adapter Seed</strong></td>
+                        <td class="col-sm-4" style="border-color: #E2ECF3;">
+                            <input type="text" class="form-control" placeholder="Network Adapter Seed"
+                                   aria-describedby="sizing-addon1">
+                        </td>
+                        <td class="col-sm-1" style="border-color: #E2ECF3;">
+                            <button class="glyphicon glyphicon-plus"></button>
+                        </td>
+                    </tr>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer" style="background-color: #E2ECF3">
+                <button type="button" class="btn btn-default">Clone</button>
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <body style="height: calc(100% - 52px);">
     <div class="sidebar col-md-2">
         <div class="nav nav-pills nav-stacked">
@@ -81,7 +189,7 @@
                     <div class="navbar-header">
                         <ul class="nav navbar-nav navbar-left">
                             <li>
-                                <button type="button" class="btn btn-default"
+                                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#vmOverlay"
                                             style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
                                         +VM
                                 </button>
@@ -93,7 +201,7 @@
                                 </button>
                             </li>
                             <li>
-                                <button type="button" class="btn btn-default"
+                                <button type="button" class="btn btn-default" data-toggle="modal" data-target="#cloneOverlay"
                                             style="background-color: #ECECEC; margin-top: 8px; margin-right: 8px;">
                                         Clone
                                 </button>
