--- a/tbms/src/frontend/templates/users/registered/persistence_workshops.html
+++ b/tbms/src/frontend/templates/users/registered/persistence_workshops.html
@@ -55,6 +55,32 @@
     </nav>
 </header>
 
+<!-- Overlay Window -->
+<div id="detailsOverlay" class="modal fade" role="dialog">
+    <div class="modal-dialog" style="width: 50%;">
+        <!-- Modal content-->
+        <div class="modal-content">
+            <div class="modal-header" align="center" style="background-color: #B8D0E4;">
+                <strong>Workshop Detailed View</strong>
+            </div>
+            <div class="modal-body" style="background-color: #E2ECF3;">
+                <table class="table">
+                    <tbody>
+                    Details and stuff
+                    </tbody>
+                </table>
+                <table class="table">
+                    <tbody>
+                    </tbody>
+                </table>
+            </div>
+            <div class="modal-footer" style="background-color: #E2ECF3">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Back</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <body style="height: calc(100% - 52px);">
     <div class="sidebar col-md-2">
         <div class="nav nav-pills nav-stacked">
@@ -64,7 +90,78 @@
     </div>
     <div class="panel panel-default col-md-10" style="border-right-color: black; border-left-color: black; height: 100%; margin-bottom: 0px;">
         <div class="panel-body">
-            Basic panel example
+            <nav class="navbar navbar-default" style="background-color: #ffffff; border-color: #ffffff;">
+                <div class="container-fluid">
+                    <div class="navbar-header">
+                        <div>
+                            <ul class="nav navbar-nav navbar-right" style="margin-top: 8px; margin-right: 8px;">
+                                <div class="dropdown">
+                                    <button type="button" class="btn btn-default dropdown-toggle"
+                                            style="background-color: #ECECEC;"
+                                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <strong>Skill Level: </strong>
+                                        <span class="caret" style="color: #2F80C1;"></span>
+                                    </button>
+                                    <ul class="dropdown-menu"
+                                        style="background-color: #F8F8F8; border-color: black; width: 250px">
+                                        <li>
+                                            Novice
+                                        </li>
+                                        <li>
+                                            Intermediate
+                                        </li>
+                                        <li>
+                                            Advanced
+                                        </li>
+                                    </ul>
+                                </div>
+                            </ul>
+                        </div>
+                 </div>
+                <div>
+                    <ul class="nav navbar-nav navbar-right">
+                        <div class="input-group input-group-lg">
+                            <input type="text" class="form-control" placeholder="Search" aria-describedby="sizing-addon1">
+                        </div>
+                    </ul>
+                </div>
+                </div><!-- /.container-fluid -->
+            </nav>
+            <div class="panel panel-default" style="background-color: #FCFCFC; border-color: black">
+                <div class="panel-heading" style="background-color: #BCD3E6;" align="center"><strong>Persistence Workshops</strong></div>
+                    <div class="panel-body">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th scope="col" align="center">
+                                    <strong>Workshop Title</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>No. of Available Sessions</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Published Date</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                                <th scope="col" align="center">
+                                    <strong>Persistence Session Lifetime</strong>
+                                    <span class="caret" style="color: #2F80C1;"></span>
+                                </th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td><a data-toggle="modal" data-target="#detailsOverlay">Workshop Title A</a></td>
+                                <td>2</td>
+                                <td>12/01/17</td>
+                                <td><a>Until 12/31/17</a></td>
+                            </tr>
+                            </tbody>
+                        </table>
+                    </div>
+            </div>
         </div>
     </div>
 </body>
